Fix CSS parsing errors - Fix invalid margin-bottom and align-items properties

--- a/src/pages/addpost/addpost.scss
+++ b/src/pages/addpost/addpost.scss
@@ -80,7 +80,7 @@
   .image-preview-container {
     position: relative;
     display: inline-block;
-    margin-bottom: 0 auto;
+    margin: 0 auto;
 
     .image-preview {
       width: 100%;
